--- a/5_experiments_and_results/0_index.tex
+++ b/5_experiments_and_results/0_index.tex
@@ -728,7 +728,7 @@ La distribución de los participantes con respecto a la rama que pertenecen y su
 
 \subsubsection{Evaluación del método DBA}
 
-Para evaluar el método se preguntó a los docentes si consideraban el método DBA adecuado para obtener automáticamente indicadores de entornos de aprendizaje virtual. A esta pregunta fueron 26 de los 31 docentes encuestados (84\%) los que consideraron el método DBA adecuado (figura~\ref{fig:cap:encuesta:metodoDBA}).
+Para evaluar el método se preguntó a los docentes si consideraban el método DBA adecuado para obtener automáticamente indicadores de entornos de aprendizaje virtual. A esta pregunta fueron 26 de los 31 docentes encuestados (84\percentage) los que consideraron el método DBA adecuado (figura~\ref{fig:cap:encuesta:metodoDBA}).
 
 
 \begin{figure}
@@ -770,11 +770,11 @@ El resumen de las respuestas puede verse en la tabla~\ref{tab:cap:encuesta:metod
 
 \paragraph{Características del método DBA}
 
-Para continuar con la evaluación del método, se preguntó a los encuestados sobre su consideración acerca de en qué medida el método DBA satisface cada una de las características que se esperan del mismo. Estas características son objetividad, adaptabilidad, sistematicidad, flexibilidad y fiabilidad. Para su evaluación se preguntó sobre ellos en una escala likert de cinco puntos: totalmente de acuerdo, de acuerdo, ni de acuerdo ni en desacuerdo, en desacuerdo y totalmente en desacuerdo. 
+Para continuar con la evaluación del método, se preguntó a los encuestados sobre su consideración acerca de en qué medida el método DBA satisface cada una de las características que se esperan del mismo. Estas características son \emph{objetividad}, \emph{adaptabilidad}, \emph{sistematicidad}, \emph{flexibilidad} y \emph{fiabilidad}. Para su evaluación se preguntó sobre ellos en una escala Likert de cinco puntos: totalmente de acuerdo, de acuerdo, ni de acuerdo ni en desacuerdo, en desacuerdo y totalmente en desacuerdo. 
 
-En la tabla~\ref{tab:cap:encuesta:metodoDBA:caracteristicas} puede verse el porcentaje de votos que obtuvo cada uno de los puntos para cada característica. Las características de la adaptabilidad, la sistematicidad y la flexibilidad son las más aceptadas para el método, ya que sumando los ''totalmente de acuerdo'' con los ''de acuerdo'' alcanzan más de la mitad de los votos, esto es, 61, 70 y 61\% respectivamente. Mientras que sumando los ''en desacuerdo'' con los ''totalmente en desacuerdo'' tienen 16, 10 y 13\% respectivamente. Por tanto, se podría decir que la mayoría de los docentes consideran que el método les proporciona estas características.
+En la tabla~\ref{tab:cap:encuesta:metodoDBA:caracteristicas} puede verse el porcentaje de votos que obtuvo cada uno de los puntos para cada característica. Las características de la \emph{adaptabilidad}, la \emph{sistematicidad} y la \emph{flexibilidad} son las más aceptadas para el método, ya que sumando los ''totalmente de acuerdo'' con los ''de acuerdo'' alcanzan más de la mitad de los votos, esto es, 61, 70 y 61\percentage respectivamente. Mientras que sumando los ''en desacuerdo'' con los ''totalmente en desacuerdo'' tienen 16, 10 y 13\percentage respectivamente. Por tanto, se podría decir que la mayoría de los docentes consideran que el método les proporciona estas características.
 
-Para la objetividad tenemos un 46\% a favor (sumando los ''totalmente de acuerdo'' con los ''de acuerdo'') y un 22\% en contra (sumando los ''en desacuerdo'' con los ''totalmente en desacuerdo''), mientras que para la fiabilidad tenemos un 45\% a favor y un 29\% en contra, contando ambas características con un 26\% de docentes que mantienen una opinión neutral, es decir, ni de acuerdo ni en desacuerdo. Por tanto, podemos decir que aunque con menor porcentaje de docentes a favor, tanto la objetividad como la fiabilidad son también aceptadas como características del método.
+Para la \emph{objetividad} tenemos un 46\percentage a favor (sumando los ''totalmente de acuerdo'' con los ''de acuerdo'') y un 22\percentage en contra (sumando los ''en desacuerdo'' con los ''totalmente en desacuerdo''), mientras que para la \emph{fiabilidad} tenemos un 45\percentage a favor y un 29\percentage en contra, contando ambas características con un 26\percentage de docentes que mantienen una opinión neutral, es decir, ni de acuerdo ni en desacuerdo. Por tanto, podemos decir que aunque con menor porcentaje de docentes a favor, tanto la \emph{objetividad} como la \emph{fiabilidad} son también aceptadas como características del método.
 
 \begin{table}
   \begin{center}
@@ -785,15 +785,15 @@ Para la objetividad tenemos un 46\% a favor (sumando los ''totalmente de acuerdo
     & & & & & \\
     \hline
     \hline
-    Objetividad & 23\% & 23\% & \textbf{32\%} & 19\% & 3\% \\
+    Objetividad & 23\percentage & 23\percentage & \textbf{32\percentage } & 19\percentage & 3\percentage \\
     \hline
-    Adaptabilidad & 16\% & \textbf{45\%} & 23\% & 13\% & 3\% \\
+    Adaptabilidad & 16\percentage & \textbf{45\percentage } & 23\percentage & 13\percentage & 3\percentage \\
     \hline
-    Sistematicidad & \textbf{40\%} & 30\% & 20\% & 10\% & 0\% \\
+    Sistematicidad & \textbf{40\percentage } & 30\percentage & 20\percentage & 10\percentage & 0\percentage \\
     \hline
-    Flexibilidad & 19\% & \textbf{42\%} & 26\% & 13\% & 0\% \\
+    Flexibilidad & 19\percentage & \textbf{42\percentage } & 26\percentage & 13\percentage & 0\percentage \\
     \hline
-    Fiabilidad & 6\% & \textbf{39\%} & 26\% & 23\% & 6\% \\
+    Fiabilidad & 6\percentage & \textbf{39\percentage } & 26\percentage & 23\percentage & 6\percentage \\
     \hline
   \end{tabular}
 \end{center}
@@ -803,7 +803,7 @@ Para la objetividad tenemos un 46\% a favor (sumando los ''totalmente de acuerdo
 
 \subsubsection{Evaluación del DSL}
 
-Para evaluar el DSL se preguntó a los docentes si consideraban el lenguaje presentado útil para diseñar y contrastar estrategias de evaluación a partir de los registros de actividad de los entornos de aprendizaje virtual. A esta pregunta también fueron 26 de los 31 docentes encuestados (84\%) los que consideraron el lenguaje adecuado.
+Para evaluar el DSL se preguntó a los docentes si consideraban el lenguaje presentado útil para diseñar y contrastar estrategias de evaluación a partir de los registros de actividad de los entornos de aprendizaje virtual. A esta pregunta también fueron 26 de los 31 docentes encuestados (84\percentage) los que consideraron el lenguaje adecuado.
 
 Por tanto se puede decir que los docentes consideran el método como válido. Pero también se quiso determinar si existía relación entre la respuesta de cada docente y su rama. Para ello, se define como hipótesis nula que \emph{la consideración por parte de un docente de que el lenguaje sea o no útil es independiente de la rama de dicho docente}. Para contrastar la hipótesis se utilizó el test exacto de Fisher, no pudiéndose rechazar la hipótesis con un p-valor de 0,6142, muy superior al umbral de significación del 0,005.
 
@@ -836,11 +836,42 @@ El resumen de las respuestas puede verse en la tabla~\ref{tab:cap:encuesta:DSL:r
 
 \paragraph{Características del DSL}
 
-Facilidad de aprendizaje	Eficacia	Ahorra tiempo	Escalabilidad	Capacidad de reutilización	Fiabilidad
+Para continuar con la evaluación del DSL, se preguntó a los encuestados sobre su consideración acerca de en qué medida el DSL satisface cada una de las características que se esperan del mismo. Estas características son \emph{facilidad de aprendizaje}, \emph{eficacia}, \emph{ahorra tiempo}, \emph{escalabilidad}, \emph{capacidad de reutilización} y \emph{fiabilidad}. Para su evaluación se preguntó sobre ellos en una escala Likert de cinco puntos: totalmente de acuerdo, de acuerdo, ni de acuerdo ni en desacuerdo, en desacuerdo y totalmente en desacuerdo. 
+
+En la tabla~\ref{tab:cap:encuesta:DSL:caracteristicas} puede verse el porcentaje de votos que obtuvo cada uno de los puntos para cada característica. En primer lugar cabe destacar que el punto más votado en cuatro de las seis características fue el neutral, es decir, ni de acuerdo ni en desacuerdo. Estas cuatro características son la \emph{fiabilidad} con un 42\percentage, la \emph{facilidad de aprendizaje} con un 39\percentage, la \emph{escalabilidad} con un 35\percentage y el \emph{ahorro de tiempo} con un 32\percentage (en este último caso hay empate con el punto ''totalmente de acuerdo'').
+
+A pesar de esta ''neutralidad'', también es importante resaltar que hay un bajo porcentaje de desacuerdos para las características, siendo todos los porcentajes inferiores al 20\percentage, excepto para la fiablidad que es un 23\percentage. Además, para todas las características son más los docentes que están de acuerdo que los que no, superando en cuatro de seis el 50\percentage de votos a favor (\emph{facilidad de aprendizaje} con un 51\percentage, \emph{eficacia} con un 58\percentage, \emph{ahorro de tiempo} con un 55\percentage y \emph{capacidad de reutilización} con un 58\percentage.
+
+\begin{table}
+  \begin{center}
+  \begin{tabular}{| m{2.5cm} | r | r | r | r | r |}
+    \hline
+    \multirow{3}{2.5cm}{Características} & \multirow{3}{1.9cm}{\centering Totalmente de acuerdo} & \multirow{3}{1.2cm}{\centering De acuerdo} & \multirow{3}{2.3cm}{\centering Ni de acuerdo ni en desacuerdo} & \multirow{3}{1.8cm}{\centering En desacuerdo} & \multirow{3}{1.9cm}{\centering Totalmente en desacuerdo} \\
+    & & & & & \\
+    & & & & & \\
+    \hline
+    \hline
+    Facilidad de aprendizaje & 19\percentage & 32\percentage & \textbf{39\percentage } & 7\percentage & 3\percentage \\
+    \hline
+    Eficacia & 13\percentage & \textbf{45\percentage } & 26\percentage & 16\percentage & 0\percentage \\
+    \hline
+    Ahorra tiempo & \textbf{32\percentage } & 23\percentage & \textbf{32\percentage } & 13\percentage & 0\percentage \\
+    \hline
+    Escalabilidad & 23\percentage & 23\percentage & \textbf{35\percentage } & 19\percentage & 0\percentage \\
+    \hline
+    Capacidad de reutilización & 26\percentage & \textbf{32\percentage } & 29\percentage & 6,5\percentage & 6,5\percentage \\
+    \hline
+    Fiabilidad & 6\percentage & 29\percentage & \textbf{42\percentage } & 23\percentage & 0\percentage \\
+    \hline
+  \end{tabular}
+\end{center}
+\caption{Evaluación de las características del DSL}
+\label{tab:cap:encuesta:DSL:caracteristicas}
+\end{table}
 
 \subsubsection{Evaluación de la sintaxis del DSL (consulta tipo)}
 
-Para evaluar la sintaxis del DSL se mostró una consulta de ejemplo y se preguntó a los docentes si consideraban la consulta entendible. A esta pregunta fueron 24 de los 31 docentes encuestados (77\%) los que consideraron entendible la consulta.
+Para evaluar la sintaxis del DSL se mostró una consulta de ejemplo y se preguntó a los docentes si consideraban la consulta entendible. A esta pregunta fueron 24 de los 31 docentes encuestados (77\percentage) los que consideraron entendible la consulta.
 
 Por tanto se puede decir que los docentes consideran el método como válido. Pero también se quiso determinar si existía relación entre la respuesta de cada docente y su rama. Para ello, se define como hipótesis nula que \emph{la consideración por parte de un docente de que si la consulta es o no entendible es independiente de la rama de dicho docente}. Para contrastar la hipótesis se utilizó el test exacto de Fisher, no pudiéndose rechazar la hipótesis con un p-valor de 0,121, superior al umbral de significación del 0,005.
 
@@ -873,7 +904,7 @@ El resumen de las respuestas puede verse en la tabla~\ref{tab:cap:encuesta:consu
 
 \subsubsection{Evaluación de los resultados}
 
-Para evaluar los resultados devueltos por el DSL se mostró como ejemplo los resultados que devolvería la consulta de ejemplo y se preguntó a los docentes si consideraban dichos resultados entendibles. A esta pregunta fueron 20 de los 31 docentes encuestados (64\%) los que consideraron entendible la consulta.
+Para evaluar los resultados devueltos por el DSL se mostró como ejemplo los resultados que devolvería la consulta de ejemplo y se preguntó a los docentes si consideraban dichos resultados entendibles. A esta pregunta fueron 20 de los 31 docentes encuestados (64\percentage) los que consideraron entendible la consulta.
 
 Por tanto se puede decir que los docentes consideran el método como válido. Pero también se quiso determinar si existía relación entre la respuesta de cada docente y su rama. Para ello, se define como hipótesis nula que \emph{la consideración por parte de un docente de que si los resultados son o no entendibles es independiente de la rama de dicho docente}. Para contrastar la hipótesis se utilizó el test exacto de Fisher, no pudiéndose rechazar la hipótesis con un p-valor de 0,010, superior al umbral de significación del 0,005.
 
@@ -1052,7 +1083,33 @@ En este caso, los resultados vienen desglosados por cada actividad del campus vi
 
 \subsection{Discusión y análisis}
 
-Los resultados del cuestionario son muy satisfactorios. En primer lugar, aunque en esta tesis se propone un método y una herramienta para la evaluación de competencias genéricas, no es un objetivo de esta tesis establecer un indicador fehaciente para ninguna de ellas. En los ejemplos mostrados se proponen ejemplos de indicadores, y según el criterio de cada participante en el cuestionario, unos son más válidos que otros. Para la competencia del \emph{trabajo en equipo} prácticamente hay un empate entre el `sí` (26) y el `no`(25). Mientras que en la \emph{planificación y gestión del tiempo} domina el `sí` (40 a 11), en la competencia del \emph{liderazgo} domina el `no` (17 a 34). Las justificaciones de los participantes en muchos casos para dar el `no` van en la línea de la necesidad de completar el indicador con información previa. Esto podría ser un ejercicio de redefinición de la hipótesis inicial o un rediseño de la evaluación.
+Los resultados de los cuestionarios son muy satisfactorios. En primer lugar, se han evaluado el método DBA y el DSL que implementa el método, con el fin de medir la consecución de las hipótesis planteadas en esta tesis para medir la consecuión de los objetivos. En segundo lugar, se han evaluado los resultados obtenidos mediante el DSL, con el fin de valorar su aplicabilidad en la evaluación de diferentes competencias genéricas.
+
+\paragraph*{Método DBA y DSL}
+El 84\percentage de los docentes encuestados consideran adecuado el método DBA para obtener indicadores de entornos de aprendizaje virtual y consideran el DSL útil para diseñar y contrastar estrategias de evaluación a partir de los registros de actividad de dichos entornos. 
+
+A las encuestas se les pasó el test exacto de Fisher para valorar si las respuestas de los docentes son independientes de la rama a la que pertenecen. No se pudo rechazar la hipótesis de independencia de las respuestas para ningún caso, quedando en ambos casos el estadístico muy por encima del valor umbral.
+
+Para afinar aún más en el detalle, se volvió a realizar el test estadístico de Fisher tras agrupar a los docentes en dos grupos, según pertenezcan a las SSH (\emph{Social Science and Humanities}) o a las EHSE (\emph{Earth and Healt Science and Engineering}). En este caso, tampoco se pudo rechazar la hipótesis de independencia, quedando siempre el valor del estadístico por encima del valor umbral.
+
+Además, el 77\percentage considera entendibles la sintaxis utilizada para definir las consultas en el DSL, mientras que el 64\% considera entendibles los resultados obtenidos a partir de la ejecución de dichas consultas.
+
+También en estos casos se aplicó el test exacto de Fisher para valorar la independencia de los resultados, primero con respecto a las ramas de los docentes y segundo con respecto al agrupamiento de dichas ramas según sean de SSH o de EHSE. En todos los casos, el estadístico quedó por encima del umbral, aunque no con una diferencia tan amplia como en los casos anteriores. Sobre todo es llamativo lo que ocurre con los resultados, donde todos los docentes del area de Ciencias Sociales marcaron como no entendibles los resultados que devolvía el DSL. A pesar de ello, se sigue sin poder rechazar la hipótesis de independencia.
+
+Por tanto, a partir de los resultados obtenidos se acepta la consecución de las hipótesis planteadas en esta tesis:
+\begin{itemize}
+\item \emph{H1}: El método DBA permite obtener de manera automática indicadores de los entornos de aprendizaje virtual
+\item \emph{H2}: El DSL permite a los docentes diseñar y contrastar estrategias de evaluación a partir de los registros de actividad de los entornos de aprendizaje virtual
+\end{itemize}
+
+Además, se ha preguntado a los encuestados tanto si el método DBA como el DSL han satisfecho las características que se les espera. 
+
+Más de la mitad de los docentes (entre el 60 y el 70\percentage) considera que el método DBA satisfacen las características de la \emph{adaptabilidad},\emph{sistematicidad} y la \emph{flexibilidad}. Las características de la \emph{objetividad} y la \emph{fiabilidad} también tienen un mayor porcentaje de votos a favor que en contra, aunque con menor porcentaje  (en torno al 45\percentage).
+
+Con respecto a las características del DSL siguen siendo, para todas las características, más los docentes que están a favor que los que están en contra. Sin embargo, en torno un tercio de los encuestados para cada característica se situa en la posición neutra. Las características de la \emph{facilidad de aprendizaje}, la \emph{eficacia}, el \emph{ahorro de tiempo} y la \emph{capacidad de reutilización} tiene un porcentaje de docentes a favor de entre el 50 y el 58\percentage. La \emph{escalabilidad} cuenta con 46\percentage a favor y la \emph{fiabilidad} con un 35\percentage. 
+
+\paragraph*{Indicadores de competencias genéricas}
+Aunque en esta tesis se propone un método y una herramienta para la evaluación de competencias genéricas, no es un objetivo de esta tesis establecer un indicador fehaciente para ninguna de ellas. En los ejemplos mostrados se proponen ejemplos de indicadores, y según el criterio de cada participante en el cuestionario, unos son más válidos que otros. Para la competencia del \emph{trabajo en equipo} prácticamente hay un empate entre el `sí` (26) y el `no`(25). Mientras que en la \emph{planificación y gestión del tiempo} domina el `sí` (40 a 11), en la competencia del \emph{liderazgo} domina el `no` (17 a 34). Las justificaciones de los participantes en muchos casos para dar el `no` van en la línea de la necesidad de completar el indicador con información previa. Esto podría ser un ejercicio de redefinición de la hipótesis inicial o un rediseño de la evaluación.
 
 En segundo lugar, partiendo de los diferentes perfiles de los participantes en la encuesta se demuestra que sus respuestas son independientes tanto de su perfil docente como de su perfil más o menos técnico. De esta manera se descarta que las propuestas de diseño de evaluación de competencia genérica tengan una orientación demasiado técnica y que por tanto sean estos los únicos que acepten los diseños, o que esté más cercano a un docente de perfil universitario. El establecimiento de una serie de hipótesis nulas y la prueba $\chi^2$ de Pearson así lo han demostrado.
 
